--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.11",
     "@types/react-dom": "^16.9.12",
     "@types/react-redux": "^7.1.16",
+    "classnames": "^2.3.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,7 +23,9 @@
     "react-scripts": "4.0.3",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +54,7 @@
     "@types/react-modal": "^3.12.0",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
