--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^3.3.0",
     "react-hook-form": "^7.3.6",
     "react-modal": "^3.13.1",
     "react-redux": "^7.2.4",
